--- a/css/style.css
+++ b/css/style.css
@@ -122,54 +122,6 @@ NAVIGATION OPACITY
 
 
 
-.opacity-nav{
-  position:fixed;
-  display:none;
-  width:100%;
-  height:100%;
-  top:0;
-  z-index:9999;
-  background:rgba(0,0,0,0.90);
-  background-color: #191919;
-}
-
-
-ul.menu-fullscreen{
-  font-family: Bigilla;
-  text-transform: uppercase;
-  width: 100%;
-  top: 50%;
-  position: absolute;
-  height: 280px;
-  margin-top: -140px;
-}
-
-ul.menu-fullscreen li{
-  font-size:90px;
-  letter-spacing: 2px;
-  text-align:center;
-  line-height:80px;
-  font-weight:500;
-}
-
-
-ul.menu-fullscreen li > a{
-  background: linear-gradient(to left, white 25%, #fde071 37.5%, #ef9671, #996a6e 62.5%, white 75%);
-  background-size: 200% 200%;
-  border:0;
-  animation: rainbow 3s ease-in-out infinite;
-  background-clip: text;
-  -webkit-background-clip:text;
-  color: white;
-  transition: color .5s ease-in-out;
-
-}
-
-ul.menu-fullscreen li > a:hover{
-  color:rgba(0,0,0,0);
-}
-
-
 #full{
   width:1140px;
   position: relative;
@@ -315,6 +267,7 @@ ul.header-nav{
 
 .logos {
   margin-top: 30px;
+  margin-left: -30px;
   width: 150px;
 }
 
@@ -379,6 +332,22 @@ CONTENT
 **************************
 */
 
+.more{
+  margin: 90px;
+}
+
+.more img{
+  transition: 0.5s all ease-in-out;
+
+}
+
+.more img:hover{
+
+  transition: 0.5s all ease-in-out;
+transform: scale(1.2);
+
+}
+
 .hero-image{
   position:relative; 
   width:100%; 
@@ -423,12 +392,6 @@ CONTENT
 
 }
 
-.overlay {
-  position:absolute;
-  top:40%;
-  left:10%;
-  z-index:1;
-}
 
 
 .content .text-intro{
@@ -654,7 +617,6 @@ footer{
   margin-top:150px;
   height:350px;
   overflow:hidden;
-  position:relative;
   z-index:10;
 }
 
@@ -789,26 +751,6 @@ textarea:focus{background:#f4f4f4; height:250px;}
 
 
 
-video{
-  position:relative;
-    z-index:0;
-display: block;
-background-position: center center;
-background-repeat: no-repeat;
-background-size: cover;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-width: 100%;
-height: 100%;
-}
-
-@keyframes rainbow { 
-  0%{background-position:right}
-  50%{background-position:left}
-  100%{background-position:right}
-}
 
 
 
@@ -1026,74 +968,240 @@ hr{
 
 
 
-.row {
-  padding-top: 80px;
-  display: flex;
-  flex-wrap: wrap;
-  z-index: 0;
-  margin-left: 15px;
-  margin-right: 20px;
+
+
+
+
+
+
+
+
+ #services-02 {
+    background: #f4f4f4;
+       margin-top: 90px;
 }
 
-.column {
-  flex: 100%;
-  max-width: 100%;
-
+#services-tabs ul {
+    margin-bottom: 40px;
 }
 
-.column img,video {
-  width: 100%;  
-  height: 450px;
-  object-fit: cover;  
+#services-tabs ul li {
+    padding: 5px 30px;
 }
 
-.container {
-  position: relative;
-  width: 100%;
-  border-left: 5px solid black;
-  border-right: 5px solid black;
-  border-bottom: 5px solid black;
-
+#services-tabs ul li a {
+     font-family: "Roboto Condensed", sans-serif; ;
+    font-size: 14px;
+    color: #212226;
+    text-transform: uppercase;
+    font-weight: bold
+    padding: 0;
+    text-decoration: none;
 }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: 0.5s ease;
+
+/* Tab active state */
+
+#services-tabs ul li.r-tabs-state-active a {
+    color: #fb527a;
+    font-weight: 700;
+    border-bottom: 3px solid #fb527a;
+    padding-bottom: 5px;
+    -webkit-transition: border-color 300ms linear;
+    transition: border-color 300ms linear;
+}
+
+.service-tab .col-md-6 {
+    padding: 0;
+}
+
+.service-tab img {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.service-tab .tab-bg {
+    background: #fff;
+    padding: 59px 30px;
+    min-height: 481px;
+}
+
+.service-tab h2 {
+    font-size: 48px;
+    color: #bbb;
+    margin-bottom: 20px;
+    font-weight: 100;
+}
+
+.service-tab h3 {
+    font-size: 32px;
+    margin-bottom: 30px;
+}
+
+.service-tab p {
+    line-height: 24px;
+    margin-bottom: 30px;
+}
+
+
+.works .container{
+  padding-top: 100px;
+  width: 94%;
+  }
+
+ 
+.works{
   background-color: black;
-}
-
-.container:hover .overlay {
-  opacity: 0.7;
 
 }
+.works .filtering .filter{
+    display: inline-block;
+    padding: 29px 15px;
+    box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
 
-.text {
+    
+}
+
+.works .filtering span{
+    font-family: 'Poppins', sans-serif;
+    margin: 0 5px;
+    padding: 8px 20px;
+    font-size: 18px;     
+    cursor: pointer;
+    letter-spacing: 2px;
+
+    
+  background: linear-gradient(to left, white 25%, #fde071 37.5%, #ef9671, #996a6e 62.5%, white 75%);
+  background-size: 200% 200%;
+  text-decoration: none;
+  animation: rainbow 3s ease-in-out infinite;
+  background-clip: text;
+  -webkit-background-clip:text;
   color: white;
-  font-size: 40px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
+  transition: color .5s ease-in-out;
+
+    
+}
+
+.works .filtering span:hover{
+    color:rgba(0,0,0,0);
+    
+
+    
+}
+
+.works .filtering .active{
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+    color: #555555;
+    
+
+
+}
+
+.works .item-img{
+    position: relative;
+    margin-top: 15px;
+    margin-right: 3px;
+    margin-left: 3px;
+
+}
+
+.works .item-img video{
+    position: relative;
+    margin-top: 15px;
+    margin-right: 3px;
+    margin-left: 3px;
+
+} 
+
+
+.works .item-img:hover .item-img-overlay{
+    visibility: visible;
+    opacity: 1;
 }
 
 
-/* Desktop Styles */
-@media only screen and (min-width: 1024px) {
-    .column {
-      flex: 33.3%;
-      max-width: 33.3%;
-
-    }
+.works .item-img-overlay{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    padding: 30px;
+    background: rgba(255,255,255,0.95);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.5s;
+    
 }
+
+
+
+.works .item-img-overlay .icon{
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+    width: 40px;
+    height: 40px;
+    line-height:40px; 
+    border-radius: 50%;
+    border: 1px solid #1a2373;
+    text-align: center;
+    font-size: 20px;
+    color: #1a2373;
+        
+    
+}
+
+.works .item-img-overlay p{
+    color: #1a2373;
+    font-weight: bold;
+    font-size: 16px;
+    
+}
+
+
+.works .item-img-overlay h6{
+    
+    font-weight: 400;
+    font-size: 13px;
+    margin-top: 5px;
+}
+
+.row.no-gutters [class*=col-]{
+    padding: 0;
+    margin-top: -10px;
+    margin-right: -0.px;
+}
+
+ 
+
+
+
+
+
+.text-center {
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1104,7 +1212,7 @@ hr{
 .title-skills {
   font-size: 2em;
   margin: 2em 3em 1em;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Poppins', sans-serif;
   text-transform: uppercase;
   letter-spacing: 10px;
   transition: all 400ms ease-in-out;
