--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,54 @@ NAVIGATION OPACITY
 
 
 
+.opacity-nav{
+  position:fixed;
+  display:none;
+  width:100%;
+  height:100%;
+  top:0;
+  z-index:9999;
+  background:rgba(0,0,0,0.90);
+  background-color: #191919;
+}
+
+
+ul.menu-fullscreen{
+  font-family: Bigilla;
+  text-transform: uppercase;
+  width: 100%;
+  top: 50%;
+  position: absolute;
+  height: 280px;
+  margin-top: -140px;
+}
+
+ul.menu-fullscreen li{
+  font-size:90px;
+  letter-spacing: 2px;
+  text-align:center;
+  line-height:80px;
+  font-weight:500;
+}
+
+
+ul.menu-fullscreen li > a{
+  background: linear-gradient(to left, white 25%, #fde071 37.5%, #ef9671, #996a6e 62.5%, white 75%);
+  background-size: 200% 200%;
+  border:0;
+  animation: rainbow 3s ease-in-out infinite;
+  background-clip: text;
+  -webkit-background-clip:text;
+  color: white;
+  transition: color .5s ease-in-out;
+
+}
+
+ul.menu-fullscreen li > a:hover{
+  color:rgba(0,0,0,0);
+}
+
+
 #full{
   width:1140px;
   position: relative;
@@ -267,7 +315,6 @@ ul.header-nav{
 
 .logos {
   margin-top: 30px;
-  margin-left: -30px;
   width: 150px;
 }
 
@@ -332,22 +379,6 @@ CONTENT
 **************************
 */
 
-.more{
-  margin: 90px;
-}
-
-.more img{
-  transition: 0.5s all ease-in-out;
-
-}
-
-.more img:hover{
-
-  transition: 0.5s all ease-in-out;
-transform: scale(1.2);
-
-}
-
 .hero-image{
   position:relative; 
   width:100%; 
@@ -392,6 +423,12 @@ transform: scale(1.2);
 
 }
 
+.overlay {
+  position:absolute;
+  top:40%;
+  left:10%;
+  z-index:1;
+}
 
 
 .content .text-intro{
@@ -617,6 +654,7 @@ footer{
   margin-top:150px;
   height:350px;
   overflow:hidden;
+  position:relative;
   z-index:10;
 }
 
@@ -751,6 +789,26 @@ textarea:focus{background:#f4f4f4; height:250px;}
 
 
 
+video{
+  position:relative;
+    z-index:0;
+display: block;
+background-position: center center;
+background-repeat: no-repeat;
+background-size: cover;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+width: 100%;
+height: 100%;
+}
+
+@keyframes rainbow { 
+  0%{background-position:right}
+  50%{background-position:left}
+  100%{background-position:right}
+}
 
 
 
@@ -968,222 +1026,243 @@ hr{
 
 
 
-
-
-
-
-
-
-
-
- #services-02 {
-    background: #f4f4f4;
-       margin-top: 90px;
+.row {
+  padding-top: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  z-index: 0;
+  margin-left: 15px;
+  margin-right: 20px;
 }
 
-#services-tabs ul {
-    margin-bottom: 40px;
+.column {
+  flex: 100%;
+  max-width: 100%;
+
 }
 
-#services-tabs ul li {
-    padding: 5px 30px;
+.column img,video {
+  width: 100%;  
+  height: 450px;
+  object-fit: cover;  
 }
 
-#services-tabs ul li a {
-     font-family: "Roboto Condensed", sans-serif; ;
-    font-size: 14px;
-    color: #212226;
-    text-transform: uppercase;
-    font-weight: bold
-    padding: 0;
-    text-decoration: none;
+.container {
+  position: relative;
+  width: 100%;
+  border-left: 5px solid black;
+  border-right: 5px solid black;
+  border-bottom: 5px solid black;
+
 }
 
-
-/* Tab active state */
-
-#services-tabs ul li.r-tabs-state-active a {
-    color: #fb527a;
-    font-weight: 700;
-    border-bottom: 3px solid #fb527a;
-    padding-bottom: 5px;
-    -webkit-transition: border-color 300ms linear;
-    transition: border-color 300ms linear;
-}
-
-.service-tab .col-md-6 {
-    padding: 0;
-}
-
-.service-tab img {
-    width: 100%;
-    margin: 0 auto;
-}
-
-.service-tab .tab-bg {
-    background: #fff;
-    padding: 59px 30px;
-    min-height: 481px;
-}
-
-.service-tab h2 {
-    font-size: 48px;
-    color: #bbb;
-    margin-bottom: 20px;
-    font-weight: 100;
-}
-
-.service-tab h3 {
-    font-size: 32px;
-    margin-bottom: 30px;
-}
-
-.service-tab p {
-    line-height: 24px;
-    margin-bottom: 30px;
-}
-
-
-.works .container{
-  padding-top: 100px;
-  width: 94%;
-  }
-
- 
-.works{
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
   background-color: black;
-
-}
-.works .filtering .filter{
-    display: inline-block;
-    padding: 29px 15px;
-    box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
-
-    
 }
 
-.works .filtering span{
-    font-family: 'Poppins', sans-serif;
-    margin: 0 5px;
-    padding: 8px 20px;
-    font-size: 18px;     
-    cursor: pointer;
-    letter-spacing: 2px;
+.container:hover .overlay {
+  opacity: 0.7;
 
-    
-  background: linear-gradient(to left, white 25%, #fde071 37.5%, #ef9671, #996a6e 62.5%, white 75%);
-  background-size: 200% 200%;
-  text-decoration: none;
-  animation: rainbow 3s ease-in-out infinite;
-  background-clip: text;
-  -webkit-background-clip:text;
+}
+
+.text {
   color: white;
-  transition: color .5s ease-in-out;
-
-    
-}
-
-.works .filtering span:hover{
-    color:rgba(0,0,0,0);
-    
-
-    
-}
-
-.works .filtering .active{
-    border-bottom: 1px solid white;
-    border-top: 1px solid white;
-    color: #555555;
-    
-
-
-}
-
-.works .item-img{
-    position: relative;
-    margin-top: 15px;
-    margin-right: 3px;
-    margin-left: 3px;
-
-}
-
-.works .item-img video{
-    position: relative;
-    margin-top: 15px;
-    margin-right: 3px;
-    margin-left: 3px;
-
-} 
-
-
-.works .item-img:hover .item-img-overlay{
-    visibility: visible;
-    opacity: 1;
+  font-size: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 
-.works .item-img-overlay{
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-    padding: 30px;
-    background: rgba(255,255,255,0.95);
+/* Desktop Styles */
+@media only screen and (min-width: 1024px) {
+    .column {
+      flex: 33.3%;
+      max-width: 33.3%;
+
+    }
+}
+
+
+
+
+
+
+
+
+.button_container {
+  position: fixed;
+  top: 5%;
+  right: 2%;
+  height: 27px;
+  width: 35px;
+  cursor: pointer;
+  z-index: 100;
+  transition: opacity 0.25s ease;
+}
+.button_container:hover {
+  opacity: 0.7;
+}
+.button_container.active .top {
+  transform: translateY(11px) translateX(0) rotate(45deg);
+  background: #FFF;
+}
+.button_container.active .middle {
+  opacity: 0;
+  background: #FFF;
+}
+.button_container.active .bottom {
+  transform: translateY(-11px) translateX(0) rotate(-45deg);
+  background: #FFF;
+}
+.button_container span {
+  background: #FF5252;
+  border: none;
+  height: 5px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all 0.35s ease;
+  cursor: pointer;
+}
+.button_container span:nth-of-type(2) {
+  top: 11px;
+}
+.button_container span:nth-of-type(3) {
+  top: 22px;
+}
+
+.overlay {
+  position: fixed;
+  background: #FF5252;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.35s, visibility 0.35s, height 0.35s;
+  overflow: hidden;
+}
+.overlay.open {
+  opacity: 0.9;
+  visibility: visible;
+  height: 100%;
+}
+.overlay.open li {
+  -webkit-animation: fadeInRight 0.5s ease forwards;
+          animation: fadeInRight 0.5s ease forwards;
+  -webkit-animation-delay: 0.35s;
+          animation-delay: 0.35s;
+}
+.overlay.open li:nth-of-type(2) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+.overlay.open li:nth-of-type(3) {
+  -webkit-animation-delay: 0.45s;
+          animation-delay: 0.45s;
+}
+.overlay.open li:nth-of-type(4) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+.overlay nav {
+  position: relative;
+  height: 70%;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 50px;
+  font-family: "Vollkorn", serif;
+  font-weight: 400;
+  text-align: center;
+}
+.overlay ul {
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+  display: inline-block;
+  position: relative;
+  height: 100%;
+}
+.overlay ul li {
+  display: block;
+  height: 25%;
+  height: calc(100% / 4);
+  min-height: 50px;
+  position: relative;
+  opacity: 0;
+}
+.overlay ul li a {
+  display: block;
+  position: relative;
+  color: #FFF;
+  text-decoration: none;
+  overflow: hidden;
+}
+.overlay ul li a:hover:after, .overlay ul li a:focus:after, .overlay ul li a:active:after {
+  width: 100%;
+}
+.overlay ul li a:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0%;
+  transform: translateX(-50%);
+  height: 3px;
+  background: #FFF;
+  transition: 0.35s;
+}
+
+@-webkit-keyframes fadeInRight {
+  0% {
     opacity: 0;
-    visibility: hidden;
-    transition: all 0.5s;
-    
+    left: 20%;
+  }
+  100% {
+    opacity: 1;
+    left: 0;
+  }
+}
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    left: 20%;
+  }
+  100% {
+    opacity: 1;
+    left: 0;
+  }
 }
 
 
 
-.works .item-img-overlay .icon{
-    position: absolute;
-    right: 30px;
-    bottom: 30px;
-    width: 40px;
-    height: 40px;
-    line-height:40px; 
-    border-radius: 50%;
-    border: 1px solid #1a2373;
-    text-align: center;
-    font-size: 20px;
-    color: #1a2373;
-        
-    
-}
-
-.works .item-img-overlay p{
-    color: #1a2373;
-    font-weight: bold;
-    font-size: 16px;
-    
-}
-
-
-.works .item-img-overlay h6{
-    
-    font-weight: 400;
-    font-size: 13px;
-    margin-top: 5px;
-}
-
-.row.no-gutters [class*=col-]{
-    padding: 0;
-    margin-top: -10px;
-    margin-right: -0.px;
-}
-
- 
 
 
 
 
 
-.text-center {
-    text-align: center;
-}
+
+
+
+
+
+
 
 
 
@@ -1212,7 +1291,7 @@ hr{
 .title-skills {
   font-size: 2em;
   margin: 2em 3em 1em;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   letter-spacing: 10px;
   transition: all 400ms ease-in-out;
