--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ body{
 
 }
 
+.works h1{
+  color: white;
+  text-align: center;
+}
+
 ::selection {
 		background: #000;
 		color: #fff;
@@ -268,7 +273,7 @@ ul.header-nav{
 .logos {
   margin-top: 30px;
   margin-left: -30px;
-  width: 150px;
+  width: 170px;
 }
 
 header .logo > a{
@@ -1051,7 +1056,7 @@ hr{
 
  
 .works{
-  background-color: black;
+  background-color:black;
 
 }
 .works .filtering .filter{
@@ -1125,7 +1130,7 @@ hr{
 .works .item-img-overlay{
     position: absolute;
     top: 10px;
-    left: 10px;
+    left: 10px; 
     right: 10px;
     bottom: 10px;
     padding: 30px;
@@ -1146,16 +1151,16 @@ hr{
     height: 40px;
     line-height:40px; 
     border-radius: 50%;
-    border: 1px solid #1a2373;
+    border: 1px solid black;
     text-align: center;
     font-size: 20px;
-    color: #1a2373;
+    color:black;
         
     
 }
 
 .works .item-img-overlay p{
-    color: #1a2373;
+    color:black;
     font-weight: bold;
     font-size: 16px;
     
@@ -1210,8 +1215,8 @@ hr{
 }
 
 .title-skills {
-  font-size: 2em;
-  margin: 2em 3em 1em;
+  font-size:43px;
+  margin: 1em 3.8em 1em;
   font-family: 'Poppins', sans-serif;
   text-transform: uppercase;
   letter-spacing: 10px;
@@ -1220,7 +1225,7 @@ hr{
 
 .bar {
   width: 80%;
-  margin: 1.5em 6em;
+  margin: 1.5em 11.5em;
 }
 
 .skill {
@@ -1319,4 +1324,390 @@ hr{
 
 .illustrator:after {
   border-top-color: linear-gradient(to right, #fde071, #ef9671, #F2E8E9);
+}
+
+
+
+
+			
+@media screen and (min-width: 1170px) {
+  .container-fluid, .container, .admin-container {
+    padding: 0 1.66667rem 0 1.66667rem;
+  }
+}
+.container {
+max-width: 1260px;
+}@media screen and (min-width: 1170px) { .row {
+margin-left: -15px;
+margin-right: -15px;
+}.column, .grid-column {
+padding-left: 15px;
+padding-right: 15px;
+}}
+#content-holder h1 { font-size: 3.888888888888889rem;line-height: 4.722222222222222rem;letter-spacing: 0rem;}#content-holder h2 { font-size: 2.5rem;line-height: 3.111111111111111rem;}#content-holder h3 { font-size: 1.6666666666666667rem;line-height: 2.111111111111111rem;}#content-holder h4 { font-size: 1.1111111111111112rem;line-height: 1.3888888888888888rem;}#content-holder h5 { font-size: 0.8333333333333334rem;line-height: 1.1111111111111112rem;letter-spacing: 0.022222222222222223rem;}#content-holder p, #content-holder li { font-size: 1.1111111111111112rem;line-height: 2.22222222222;}#content-holder .is-content p { margin-bottom: 2.22222222222em; }#customize #custom_h30c9qw7c span, #content-holder .custom_h30c9qw7c { background-color:transparent;color:#000000;text-transform:none;font-family: "ValueSerif-Bold", serif;font-weight: 600;font-style: normal;font-size:3.3333333333333335rem;letter-spacing:0rem;padding:0rem;text-decoration:none;text-decoration-color:#000000;-webkit-text-stroke: 0rem #000000;border-color:#000000;border-width:0rem;border-style:solid; }#customize #custom_t3i5lowwt span, #content-holder .custom_t3i5lowwt { background-color:transparent;color:#000000;text-transform:none;font-family: "AkkuratMono-Regular", sans-serif;font-weight: 400;font-style: normal;font-size:1.6666666666666667rem;letter-spacing:0rem;padding:0rem;text-decoration:none;text-decoration-color:#000000;-webkit-text-stroke: 0rem #000000;border-color:#000000;border-width:0rem;border-style:solid; }#customize #custom_nigzaejf5 span, #content-holder .custom_nigzaejf5 { background-color:#ffc200;color:#000000;text-transform:none;font-family: "AkkuratMono-Regular", sans-serif;font-weight: 400;font-style: normal;font-size:0.8888888888888888rem;letter-spacing:0rem;padding:0rem;text-decoration:none;text-decoration-color:#000000;-webkit-text-stroke: 0rem #000000;border-color:#ffc200;border-width:0.5555555555555556rem;border-style:solid; }#customize #custom_rs288d8js span, #content-holder .custom_rs288d8js { background-color:#f34a1a;color:#000000;text-transform:none;font-family: "AkkuratMono-Regular", sans-serif;font-weight: 400;font-style: normal;font-size:0.8888888888888888rem;letter-spacing:0rem;padding:0rem;text-decoration:none;text-decoration-color:#000000;-webkit-text-stroke: 0rem #000000;border-color:#f34a1a;border-width:0.5555555555555556rem;border-style:solid; }#customize #custom_o1awe6t0a span, #content-holder .custom_o1awe6t0a { background-color:#0048bb;color:#000000;text-transform:none;font-family: "AkkuratMono-Regular", sans-serif;font-weight: 400;font-style: normal;font-size:0.8888888888888888rem;letter-spacing:0rem;padding:0rem;text-decoration:none;text-decoration-color:#000000;-webkit-text-stroke: 0rem #000000;border-color:#0048bb;border-width:0.5555555555555556rem;border-style:solid; }#customize #custom_xox79hpe7 span, #content-holder .custom_xox79hpe7 { background-color:#006e62;color:#000000;text-transform:none;font-family: "AkkuratMono-Regular", sans-serif;font-weight: 400;font-style: normal;font-size:0.8888888888888888rem;letter-spacing:0rem;padding:0rem;text-decoration:none;text-decoration-color:#000000;-webkit-text-stroke: 0rem #000000;border-color:#006e62;border-width:0.5555555555555556rem;border-style:solid; }#customize #custom_c8h5vdvi6 span, #content-holder .custom_c8h5vdvi6 { background-color:#ff98a0;color:#000000;text-transform:none;font-family: "AkkuratMono-Regular", sans-serif;font-weight: 400;font-style: normal;font-size:0.8888888888888888rem;letter-spacing:0rem;padding:0rem;text-decoration:none;text-decoration-color:#000000;-webkit-text-stroke: 0rem #000000;border-color:#ff98a0;border-width:0.5555555555555556rem;border-style:solid; }#customize #custom_2frxqjgi8 span, #content-holder .custom_2frxqjgi8 { background-color:transparent;color:#000000;text-transform:none;font-family: "SaolDisplay-Thin", serif;font-weight: 400;font-style: normal;font-size:6.666666666666667rem;letter-spacing:0rem;padding:0rem;text-decoration:none;text-decoration-color:#000000;-webkit-text-stroke: 0rem #000000;border-color:#000000;border-width:0rem;border-style:solid; }@media screen and (min-width: 992px) and (max-width: 1169.98px) { }@media screen and (min-width: 768px) and (max-width: 991.98px) { }@media screen and (min-width: 544px) and (max-width: 767.98px) { }@media screen and (max-width: 543.98px) { }
+
+    .transitions-preloader { background-color: #000000; }
+    .transitions-preloader .loader-image img { width: 6.666666666666667rem; }
+  
+
+.project-panel {
+background: #ffffff;
+padding: 5rem 0rem;
+}
+[data-pp-gutter="no"] .project-panel .pp-thumbs,
+.project-panel .pp-thumbs {
+margin-bottom: -3.3333333333333335rem;
+}
+#content-holder .panel-label, .projectnav-preview .panel-label {
+color: #000000;
+font-size: 1.6666666666666667rem;
+text-transform: none;
+padding-left: 0rem;
+padding-bottom: 3.3333333333333335rem;
+text-align: center;
+line-height: 1;
+}
+.project-panel .pp-title {
+padding: 0.8333333333333334rem 0rem 3.3333333333333335rem 0rem;
+}
+.project-panel .pp-title a {
+color: #000000; 
+font-size: 1rem; 
+text-transform: none;
+} 
+.project-panel .pp-title span {
+color: #999999;
+font-size: 0.6666666666666666rem;
+text-transform: none;
+}
+.semplice-next-prev {
+background: #ffffff;
+padding: 0rem 0rem 0rem 0rem;
+}
+.semplice-next-prev .np-inner {
+height: 11.944444444444445rem;
+}
+.semplice-next-prev .np-inner .np-link .np-prefix,
+.semplice-next-prev .np-inner .np-link .np-label {
+color: #000000;
+font-size: 1.555555555555556rem;
+text-transform: none;
+letter-spacing: 0rem;
+}
+.semplice-next-prev .np-inner .np-link .np-text-above {
+padding-bottom: 0.8333333333333334rem;
+}
+.semplice-next-prev .np-inner .np-link .np-label-above {
+color: #000000;
+font-size: 0.6666666666666666rem;
+text-transform: uppercase;
+letter-spacing: 1px;
+}
+.semplice-next-prev .np-inner .np-link .np-text {
+padding: 0rem 0rem;
+}
+.semplice-next .np-text {
+margin-right: -0rem;
+}
+.semplice-next-prev .nextprev-seperator {
+width: 1px;
+margin: 1.666666666666667rem -0px;
+background: #000000;
+}
+
+.np-link:hover {
+background: #ffffff;
+}
+.np-link:hover .np-text .np-label,
+.np-link:hover .np-text .np-prefix {
+color: #cccccc !important;
+}
+.np-link:hover .np-label-above {
+color: #000000 !important;
+}
+
+    .np-link:hover .np-bg { opacity: 0.4; }
+  
+a { color: #bababa; }a:hover { color: #dbdbdb; }.view-project {
+bottom: 0 !important;
+}
+.view-project a {
+color: transparent !important;
+border-color: transparent !important;
+height: 100vh !important;
+width: 100% !important;
+background: transparent !important;
+}
+
+
+.grayscale img {
+-webkit-filter: grayscale(100%); 
+filter: grayscale(100%);
+}
+
+.grayscale:hover img {
+-webkit-filter: grayscale(0%);
+filter: grayscale(0%);
+}
+
+.mabuti { line-height: 4rem !important; letter-spacing:0px !important; text-align: center !important; font-size: 2rem !important; font-family:'Sailec-Regular', sans-serif !important; font-weight:400 !important; }
+
+.view-project a:hover { background: transparent !important; }
+
+.wp-show-posts-read-more { font-size: 0.6666666666666666rem !important; font-family:'Sailec-Bold', sans-serif !important; text-transform: uppercase !important; letter-spacing:0.08333333rem; padding:0.8888888888888888rem !important;  }
+.wp-show-posts-entry-title, .wp-show-posts-entry-title a { text-transform:uppercase !important; color:#000000 !important; }
+
+input, textarea { font-family: 'Sailec-Regular' !important; 
+background:#000 !important; border:1px solid #fff !important; border-radius:0px !important; color:#fff !important;
+}
+
+.heyheyhey { font-family:'Sailec-Bold', sans-serif !important; font-size: 0.6666666666666666rem !important; background:#fff !important; color:#000 !important; border:1px solid #fff !important; width:55% !important; text-align:center !important; text-transform: uppercase !important; letter-spacing:0.08333333rem; padding:1rem !important; padding-bottom: 2rem !important; }
+.wpcf7-form .wpcf7-response-output.wpcf7-validation-errors {
+color: #D8000C;
+background-color: #FFBABA;
+border: 0;
+padding: 10px;
+font-family: 'Sailec-Regular' !important;
+}
+.wpcf7-form .wpcf7-response-output.wpcf7-mail-sent-ok {
+color: #000;
+background-color: #fff;
+border: 0;
+padding: 10px;
+font-family: 'Sailec-Regular' !important;
+}
+
+h1 { letter-spacing: -0.03em !important; }
+h2 { letter-spacing: -0.03em !important; }
+h3 { letter-spacing: -0.03em !important; }
+h4 { letter-spacing: -0.03em !important; }
+
+.grecaptcha-badge {
+opacity: 0;
+}
+.table-cell-top {
+border-top: 2px #4952bf;
+border-right: 2px #4952bf;
+border-left: 2px #4952bf;
+}
+.table-cell-mid {
+border-right: 2px #4952bf;
+border-left: 2px #4952bf;
+}
+.table-cell-bottom {
+border-bottom: 2px #4952bf;
+border-right: 2px #4952bf;
+border-left: 2px #4952bf;
+}
+.accordion-section {
+transition: background 0.25s ease;
+}
+
+.accordion-section.active {
+background: transparent !important;
+}
+
+.accordion-section .accordion-button a {
+font-size: 18px !important;
+transition: none !important;
+text-decoration: underline;
+position: relative !important;
+}
+
+.accordion-section .accordion-button a {
+transition: none !important;
+text-decoration: underline;
+}
+
+.accordion-section.active .accordion-button a {
+font-size: 0px !important;
+}
+
+.accordion-section.active .accordion-button a::before {
+content: "View less";
+font-size: 18px !important;
+}
+
+.accordion-section .accordion-button a::after {
+content: ">";
+display: inline-block;
+position: absolute;
+top: 15px;
+right: -15px;
+font-family: monospace;
+font-size: 12px;
+font-weight: bold;
+transform: rotate(-90deg) scaleY(1.7);
+}
+
+.accordion-section.active .accordion-button a::after {
+transform: rotate(90deg) scaleY(1.7);
+}
+
+.accordion-section:not(.active) .row:not(:first-child) .column {
+height: 0px !important;
+overflow: hidden !important;
+}
+
+.accordion-section:not(.active) .row:not(:first-child) {
+opacity: 1;
+}
+
+.accordion-section .row:not(:first-child) {
+opacity: 1;
+transition: opacity 0.5s ease;
+}
+.box-left {
+border-top: 2px #4952bf;
+border-bottom: 2px #4952bf;
+border-left: 2px #4952bf;
+}
+.box-mid {
+border-top: 2px #4952bf;
+border-bottom: 2px #4952bf;
+}
+.box-right {
+border-top: 2px #4952bf;
+border-bottom: 2px #4952bf;
+border-right: 2px #4952bf;
+}
+.section-top {
+border-right: 2px #4952bf;
+border-left: 2px #4952bf;
+border-top: 2px #4952bf;
+}
+.section-bottom {
+border-right: 2px #4952bf;
+border-left: 2px #4952bf;
+border-bottom: 2px #4952bf;
+}
+.section-border {
+border-right: 2px #4952bf;
+border-left: 2px #4952bf;
+border-top: 2px #4952bf;
+border-bottom: 2px #4952bf;
+}
+
+}
+.fixed-section {
+position: fixed !important;
+left: 0 !important;
+top: 0 !important;
+Z-index:99999 !important;
+width: 100%;
+pointer-events: none !important;
+}
+.fixed-section .column-content {
+pointer-events: auto !important;
+}
+.nav-logo-height {
+height: 50px !important;
+}
+.section-rounded-top {
+border-top: 10px #4952bf;
+border-radius: 10px, 10px, 0px, 0px !important;
+}
+.section-rounded-bottom {
+border-bottom: 10px #4952bf;
+border-radius: 0px, 0px, 5px, 5px !important;
+}
+/* SP Gallery Slider - Start */
+.sp-slide {
+display: none !important;
+}
+
+.sp-slide-container {
+line-height: inherit;
+text-align: inherit;
+padding: 0;
+}
+
+.sp-slider .flickity-slider .sgs-slide {
+pointer-events: none !important;
+}
+
+.sp-slider .flickity-slider .sgs-slide.is-selected {
+pointer-events: auto !important;
+}
+/* SP Gallery Slider - End */
+.bluedottedborder {
+background: url("https://serious-studio.com/wp-content/uploads/gunitaandottedbordersingle.svg");
+background-repeat: repeat-x;
+background-size: auto 7%;
+background-position-y: 50%;
+}  
+
+.leftdottedborder { border:0; border-left: 5px dotted rgba(0,0,0,0.4) !important;}
+.rightdottedborder { border:0; border-right: 5px dotted rgba(0,0,0,0.4) !important;}@media screen and (min-width: 1170px){ .hide-for-desktop {display: none !important}
+.bluefooterborder {
+border-right: dotted;
+border-left: dotted;
+}  }@media screen and (min-width: 992px) and (max-width: 1169.98px){ .hide-for-desktop {display: none !important}
+.bluefooterborder {
+border-right: 4px dotted #1e224f;
+border-left: 4px dotted #1e224f;
+}  }@media screen and (min-width: 768px) and (max-width: 991.98px){ .hide-for-desktop {display: none !important}
+.bluefooterborder {
+border-right: 4px dotted #1e224f;
+border-left: 4px dotted #1e224f;
+}  }@media screen and (min-width: 544px) and (max-width: 767.98px){.hide-for-mobile {
+display: none !important
+}}@media screen and (max-width: 543.98px){h1 { font-size:36px !important; line-height:1.3 !important; }
+h2 { font-size:24px !important; line-height:2 !important; }
+h3 { font-size:18px !important; line-height:2 !important; }
+h4 { font-size:16px !important; line-height:2 !important; }
+h5 { font-size:14px !important; line-height:2 !important; }
+h6 { font-size:10px !important; line-height:2 !important; }
+p {line-height:2 !important; }
+.mabuti { line-height: 2rem !important; text-align: center !important; font-size: 1rem !important; font-family:'Sailec-Regular', sans-serif !important; }
+.hide-for-mobile {
+display: none !important
+}
+.box-mobile {
+border-top: 2px #4952bf;
+border-bottom: 2px #4952bf;
+border-right: 2px #4952bf;
+border-left: 2px #4952bf;
+}
+.fixed-section { 
+display: none !important; 
+}}#nprogress .bar { background: #ffffff; }.back-to-top a svg { fill: #ffffff; }
+
+
+.button {
+  border-radius: 6px;
+  background-color: transparent;
+  border-color: white;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 15px;
+  padding: 10px;
+  width: 150px;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
